--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "shrink_pool"
-version = "0.9.0"
+version = "0.9.1"
 edition = "2021"
 authors = ["juzy <dochy.ksti@gmail.com>"]
 
@@ -9,7 +9,7 @@ description = "A thread pool which agressively terminates its threads as soon as
 repository = "https://github.com/dochy-ksti/shrink_pool"
 readme = "readme.md"
 keywords = ["concurrency", "thread", "threadpool"]
-categories = ["Concurrency"]
+categories = ["concurrency"]
 
 
 [dependencies]
